# AssignmentA

./: AssignmentA.vcxproj  AssignmentA.vcxproj.filters  CMakeLists.txt  CellPhone.cpp  CellPhone.h  CellPhoneHandler.cpp  CellPhoneHandler.h  Container.cpp  Container.h  Gift.cpp  Gift.h  House.cpp  House.h  HousingRegister.cpp  HousingRegister.h  README.md  System.cpp  System.h  TestCellPhoneHandler.cpp  TestCellPhoneHandler.h  Testmain.cpp  Todo.txt  main(working printer).cpp.txt  main.cpp  system.cpp  system.h  test.cpp
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
